add first crawler step

--- a/crawler/Makefile
+++ b/crawler/Makefile
@@ -1,15 +1,16 @@
-CFLAGS= -Wall -pedantic -std=c11 -I. -L../lib/ -g
+CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
 all: crawler
 
 
-crawler: 
+crawler: crawler.c 
 	$(CC) $(CFLAGS) crawler.c $(LIBS) -o $@
 	
 
 
 clean:
 	rm -rf *.o
+	rm crawler
 
