--- a/crawler/Makefile
+++ b/crawler/Makefile
@@ -2,15 +2,18 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: crawler
+all: crawler crawler3
 
 
 crawler: crawler.c 
 	$(CC) $(CFLAGS) crawler.c $(LIBS) -o $@
+
+crawler3: crawler3.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 	
 
 
 clean:
 	rm -rf *.o
-	rm crawler
+	rm crawler crawler3
 
