--- a/crawler/Makefile
+++ b/crawler/Makefile
@@ -2,7 +2,7 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: crawler crawler3
+all: crawler crawler3 crawler5
 
 
 crawler: crawler.c 
@@ -12,8 +12,11 @@ crawler3: crawler3.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 	
 
+crawler5: crawler5.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 
 clean:
 	rm -rf *.o
-	rm crawler crawler3
+	rm crawler crawler3 crawler5
 
