--- a/utils/Makefile
+++ b/utils/Makefile
@@ -4,7 +4,7 @@ LIBS=-lm
 
 # get all c files whose name starts test. This is used to extract the target name
 #https://stackoverflow.com/questions/13995906/get-filename-without-extension-within-makefile
-OFILES=queue.o hash.o webpage.o
+OFILES=queue.o hash.o webpage.o pageio.o
 
 all: $(OFILES)
 	ar cr ../lib/libutils.a $(OFILES)
@@ -16,6 +16,9 @@ webpage.o: webpage.c webpage.h
 	$(CC) $(CFLAGS) -c $<
 
 hash.o: hash.c hash.h queue.h
+	$(CC) $(CFLAGS) -c $<
+
+pageio.o: pageio.c pageio.h webpage.h
 	$(CC) $(CFLAGS) -c $<
 
 clean:
