--- a/indexer/Makefile
+++ b/indexer/Makefile
@@ -2,14 +2,16 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: indexer
+all: indexer indexer4
 
 
 indexer: indexer.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+indexer4: indexer4.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
 clean:
 	rm -rf *.o
-	rm -rf indexer
+	rm -rf indexer indexer4
 	rm -r *.dSYM
