--- a/indexer/Makefile
+++ b/indexer/Makefile
@@ -2,7 +2,7 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: indexer indexer4
+all: indexer indexer4 indexer5
 
 
 indexer: indexer.c
@@ -11,7 +11,10 @@ indexer: indexer.c
 indexer4: indexer4.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+indexer5: indexer5.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 clean:
 	rm -rf *.o
-	rm -rf indexer indexer4
+	rm -rf indexer indexer4 indexer5
 	rm -r *.dSYM
