add working indexio - valgrind passed

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,12 +2,15 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: test_pageio
+all: test_pageio test_indexio
 
-test_pageio: test_pageio.c
+test_pageio: test_pageio.c 
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
+test_indexio: test_indexio.c 
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 
 clean:
 	rm -rf *.o
-	rm test_pageio
-	rm -r *.dSYM
+	rm test_pageio test_indexio
