--- a/indexer/Makefile
+++ b/indexer/Makefile
@@ -2,7 +2,7 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: indexer indexer4 indexer5
+all: indexer indexer4 indexer5 indexer7
 
 
 indexer: indexer.c
@@ -14,7 +14,10 @@ indexer4: indexer4.c
 indexer5: indexer5.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+indexer7: indexer7.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 clean:
 	rm -rf *.o
-	rm -rf indexer indexer4 indexer5
+	rm -rf indexer indexer4 indexer5 indexer7
 	rm -r *.dSYM
