--- a/querier/Makefile
+++ b/querier/Makefile
@@ -2,7 +2,7 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: query query2 query3
+all: query query2 query3 query4
 
 query: query.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
@@ -13,6 +13,9 @@ query2: query2.c
 query3: query3.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+query4: query4.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 clean:
 	rm -rf *.o
-	rm -rf query query2 query3
+	rm -rf query query2 query3 query4
