add locked queue to utils, copied qud queue tests but adapted them for lqueue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "chrono": "c",
         "unordered_map": "c",
         "__locale": "c",
-        "thread": "c"
+        "thread": "c",
+        "lqueue.h": "c"
     }
 }
