--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,8 @@
-CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
+CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -pthread -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: test_pageio test_indexio
+all: test_thread
 
 test_pageio: test_pageio.c 
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
@@ -10,7 +10,10 @@ test_pageio: test_pageio.c
 test_indexio: test_indexio.c 
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+test_thread: test_thread.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 
 clean:
 	rm -rf *.o
-	rm test_pageio test_indexio
+	rm test_pageio test_indexio test_thread
