--- a/querier/Makefile
+++ b/querier/Makefile
@@ -2,7 +2,7 @@ CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g
 LIBS=-lutils -lcurl
 CC=gcc
 
-all: query query2 query3 query4
+all: query query2 query3 query4 query5 query44
 
 query: query.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
@@ -16,6 +16,12 @@ query3: query3.c
 query4: query4.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
+query44: query44.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
+query5: query5.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
 clean:
 	rm -rf *.o
-	rm -rf query query2 query3 query4
+	rm -rf query query2 query3 query4 query5 query44
