--- a/utils/tests/Makefile
+++ b/utils/tests/Makefile
@@ -6,7 +6,11 @@ TEST_LQUEUE_CFILES:=$(wildcard test_lqueue*.c)
 LQUEUE_TARGETS:=$(patsubst %.c,%,$(TEST_LQUEUE_CFILES))
 LQUEUE_OBJS:=$(patsubst %.c,%.o,$(TEST_LQUEUE_CFILES))
 
-all: $(LQUEUE_TARGETS)
+TEST_LHASH_CFILES:=$(wildcard test_lhash*.c)
+LHASH_TARGETS:=$(patsubst %.c,%,$(TEST_LHASH_CFILES))
+LHASH_OBJS:=$(patsubst %.c,%.o,$(TEST_LHASH_CFILES))
+
+all: $(LQUEUE_TARGETS) $(LHASH_TARGETS)
 
 $(LQUEUE_TARGETS) : %: %.o 
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
@@ -14,6 +18,12 @@ $(LQUEUE_TARGETS) : %: %.o
 $(LQUEUE_OBJS) : %.o: %.c 
 	$(CC) $(CFLAGS) -c $<
 
+$(LHASH_TARGETS) : %: %.o 
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
+$(LHASH_OBJS) : %.o: %.c 
+	$(CC) $(CFLAGS) -c $<
+
 clean:
 	rm -rf *.o
-	rm -rf $(LQUEUE_TARGETS)
+	rm -rf $(LQUEUE_TARGETS) $(LHASH_TARGETS)
