--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,13 @@
 # mac
 **/.DS_Store
 .DS_Store
+.vscode
 
+# binary files and other stuff
 pages/*
+pages1/*
+pagesl/*
+pages_allenblog/*
 tests/test_pageio
 crawler/crawler
 crawler/crawler3
