lcrawler depth 2 threads 4 works but valgrind freezes

--- a/lcrawler/Makefile
+++ b/lcrawler/Makefile
@@ -1,7 +1,7 @@
 CFLAGS= -Wall -pedantic -std=c11 -I../utils/ -L../lib/ -g -pthread
 LIBS=-lutils -lcurl
 CC=gcc
-TARGETS =lcrawler protocrawler
+TARGETS =lcrawler protocrawler priurl
 
 all: $(TARGETS)
 
@@ -10,6 +10,9 @@ lcrawler: lcrawler.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
 protocrawler: protocrawler.c
+	$(CC) $(CFLAGS) $< $(LIBS) -o $@
+
+priurl: print_urls.c
 	$(CC) $(CFLAGS) $< $(LIBS) -o $@
 
 
